[tool.poetry]
name = "fabrics"
version = "0.9.1"
description = "Optimization fabrics in python."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://tud-amr/fabrics"
keywords = ["robotics", "motion-planning", "geometry"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
casadi = ">=3.5.5"
numpy = "^1.15.3"
geomdl = "^5.3.1"
pyquaternion = "^0.9.9"
pickle-mixin = "^1.0.2"
quaternionic = "^1.0.0"
mpscenes = "^0.4"
pynput = "^1.7.6"
vector = "^1.1.1"
pytest = "6.2.5"
deprecation = "^2.1.0"
forwardkinematics = ">=1.1.4,<1.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.13.4"
pytest = "^6.2.5"
pytest-cov = "^4.0.0"
black = "^23.9.1"

[tool.poetry.group.tutorials]
optional = true

[tool.poetry.group.tutorials.dependencies]
planarenvs = "^1.4"
matplotlib = "^3.7.0"
jupyterlab = "^3.6.1"

[tool.poetry.group.agents]
optional = true

[tool.poetry.group.agents.dependencies]
planarenvs = "^1.4"
urdfenvs = {extras = ["mujoco"], version = "^0.9.9"}
mujoco = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
