[tool.poetry]
name = "fabrics"
version = "0.8.10"
description = "Optimization fabrics in python."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://tud-amr/fabrics"
keywords = ["robotics", "motion-planning", "geometry"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
casadi = ">=3.5.5"
numpy = "^1.15.3"
geomdl = "^5.3.1"
pyquaternion = "^0.9.9"
pickle-mixin = "^1.0.2"
quaternionic = "^1.0.0"
mpscenes = "^0.4"
pynput = "^1.7.6"
vector = "^1.1.1"
pytest = "6.2.5"
deprecation = "^2.1.0"
forwardkinematics = ">=1.1.4,<1.2"
robotmodels = { git = "https://github.com/maxspahn/robotmodels.git"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.13.4"
pytest = "^6.2.5"
pytest-cov = "^4.0.0"
black = "^23.9.1"

[tool.poetry.group.tutorials]
optional = true

[tool.poetry.group.tutorials.dependencies]
planarenvs = "^1.4"
matplotlib = "^3.7.0"
jupyterlab = "^3.6.1"

[tool.poetry.group.agents]
optional = true

[tool.poetry.group.agents.dependencies]
#urdfenvs = "^0.8"
planarenvs = "^1.4"
urdfenvs = {git = "https://github.com/maxspahn/gym_envs_urdf.git", rev = "develop"}

[tool.poetry.group.parallelized]
optional = true

[tool.poetry.group.parallelized.dependencies]
matplotlib = "^3.7.0"
torch = {version = "^2.3.0+cu118", source = "pytorch-gpu"}

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
