[tool.poetry]
name = "fabrics"
version = "0.10.0"
description = "Optimization fabrics in python."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://tud-amr/fabrics"
keywords = ["robotics", "motion-planning", "geometry"]

[tool.poetry.dependencies]
python = "^3.10"
casadi = ">=3.5.5"
numpy = "^1.15.3"
geomdl = "^5.3.1"
pyquaternion = "^0.9.9"
pickle-mixin = "^1.0.2"
quaternionic = "^1.0.0"
mpscenes = "^0.4"
pynput = "^1.7.6"
vector = "^1.1.1"
pytest = "6.2.5"
deprecation = "^2.1.0"
forwardkinematics = "^1.2.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.13.4"
pytest = "^6.2.5"
pytest-cov = "^4.0.0"
black = "^23.9.1"
isort = "^5.13.2"

[tool.poetry.group.tutorials]
optional = true

[tool.poetry.group.tutorials.dependencies]
matplotlib = "^3.7.0"
jupyterlab = "^3.6.1"
planarenvs = "^1.5.1"

[tool.poetry.group.agents]
optional = true

[tool.poetry.group.agents.dependencies]
planarenvs = "^1.5.1"
urdfenvs = {git = "https://github.com/maxspahn/gym_envs_urdf.git", rev = "develop"}

[tool.poetry.group.mujoco]
optional = true

[tool.poetry.group.mujoco.dependencies]
dm-control = "^1.0.26"
imageio = "^2.36.1"

[tool.poetry.group.pybullet]
optional = true

[tool.poetry.group.pybullet.dependencies]
pybullet = "^3.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
